Fixed issue with long text not wrapping in content

--- a/sass/theme/content.scss
+++ b/sass/theme/content.scss
@@ -5,6 +5,8 @@
 }
 
 #content {
+  word-wrap: break-word;
+
   .entry-meta {
     display: inline-block;
     margin-bottom: 0.25rem;
